--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,42 +1,67 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+# Este workflow de GitHub Actions automatiza el proceso de integracion continua (CI) para un proyecto Maven de Java. Se 
+# ejecuta automaticamente cada vez que se hace push o pull request a la rama main, realizando una secuencia  de pasos 
+# esenciales: primero configura el entorno con Java 17, luego compila y empaqueta el proyecto en un JAR usando Maven, 
+# despues ejecuta todas las pruebas unitarias y genera reportes de cobertura de codigo con JaCoCo que se envian a 
+# Coveralls para su visualizacion, y finalmente actualiza el grafo de dependencias en GitHub para habilitar las alertas
+# automaticas de seguridad de Dependabot. Todo esto garantiza que el codigo funcione correctamente, mantenga una buena 
+# cobertura de pruebas y este protegido contra vulnerabilidades conocidas en las dependencias, proporcionando un 
+# pipeline completo de calidad y seguridad del software.
+# Para mas informacion: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
 
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+# Marketplace de todas las Actions: https://github.com/marketplace?type=actions
+# Marketplace de Actions de CI: https://github.com/marketplace?type=actions&category=continuous-integration
+# Actions de la propia GitHub: https://github.com/actions
+# Web principal de Actions: https://github.com/features/actions
+# Documentacion de GitHub Actions: https://docs.github.com/es/actions
 
+# Define el nombre de la GitHub Action (workflow)
 name: Java CI with Maven
 
+# Disparadores (triggers) de la GitHub Action
 on:
+  # Cuando se hace un push a la rama "main"
   push:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
+  # Cuando se hace un pr a la rama "main"
   pull_request:
-    branches: [ "main", "master" ]
+    branches: [ "main" ]
 
+# Trabajos a realizar (conjuto de pasos a ejecutar)
 jobs:
+
+  # Indica el proceso de construccion del artefacto/JAR
   build:
 
-    runs-on: ubuntu-latest
+    # Indica en que tipo de maquina va a ejecutar la action
+    runs-on: ubuntu-latest # Maquina virtual de Ubuntu mas reciente
 
+    # Pasos a ejecutar
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    # Equivalente a "mvn clean install"
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-      
-      # Equivalente a tu "after_success"
-    - name: Generate coverage reports
-      if: success()
-      run: mvn clean test jacoco:report coveralls:report
 
+      # Step 1: Obtiene el codigo del repositorio a la maquina virtual usando (uses:) la action "checkout" del propio
+      # GitHub que permite clonar el codigo fuente en el entorno de ejecucion de los workflows. Las actions ya creadas
+      # nos permiten usar "aplicaciones" predefinidas en lugar de programar todo desde cero. Repo de la action: https://github.com/actions/checkout
+      - name: Checkout sources
+        uses: actions/checkout@v4
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      # Step 2: Configura Java utilizando la action "setup-java". Repo de la action: https://github.com/actions/setup-java
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        # Parametros
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+          cache: maven # Habilita cache para dependencias Maven (acelera ejecuciones futuras)
+
+      # Step 3: Compila con Maven PROGRAMANDO la action desde cero (run:) ya que no esta (o no la encontre) en el Marketplace de GitHub
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml # Compila y empaqueta el proyecto en modo batch (no interactivo) usando el pom.xml
+
+      # Step 4: Genera reportes de cobertura
+      - name: Generate coverage reports
+        if: success() # Si el paso anterior fue exitoso...
+        run: mvn clean test jacoco:report coveralls:report # Limpia, ejecuta tests, genera reporte JaCoCo y lo envia a Coveralls
+
+      # Step 5: Actualiza dependencias (con pr) para alertas de seguridad automaticas usando Dependabot (detecta vulnerabilidades en las dependencias) con vista grafica en "Dependency graph"
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6 # El hash largo es la version especifica de la action para garantizar reproducibilidad y seguridad (evita que cambios maliciosos afecten el workflow)
