--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,11 +1,11 @@
-config.path.server=server/src/main/resources/Server.ini
-config.path.archetype=server/src/main/resources/Dat/Balance.dat
+config.path.server=Server.ini
+config.path.archetype=Dat/Balance.dat
 config.path.charfiles=charfiles/
-config.path.maps=server/src/main/resources/Maps/
-config.path.objsdat=server/src/main/resources/Dat/obj.dat
-config.path.npcsdat=server/src/main/resources/Dat/NPCs.dat
+config.path.maps=Maps/
+config.path.objsdat=Dat/obj.dat
+config.path.npcsdat=Dat/NPCs.dat
 config.maps.amount=290
-config.path.citiesdat=server/src/main/resources/Dat/Ciudades.dat
+config.path.citiesdat=Dat/Ciudades.dat
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
 config.loginservice.initialavailableskills=10
 config.inventory.itemperrow=5
