feat: migrate from JUnit 4 to JUnit 5 and replace assertions with AssertJ
- Remove JUnit 4 dependency and fix version conflicts
- Update test annotations (@Before → @BeforeEach, etc.)
- Replace JUnit assertions with AssertJ for better readability
- Replace Hamcrest matchers with AssertJ equivalents
- Update imports and remove obsolete dependencies

--- a/server-security/pom.xml
+++ b/server-security/pom.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
 
+    <modelVersion>4.0.0</modelVersion>
+
     <parent>
-        <artifactId>aoserver</artifactId>
         <groupId>com.ao</groupId>
+        <artifactId>aoserver</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <modelVersion>4.0.0</modelVersion>
     <artifactId>server-security</artifactId>
 
-    <description>Security module for AO Server</description>
+    <name>Server Security</name>
+    <description>Security server module for Argentum Online</description>
 
     <dependencies>
         <dependency>
