--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,3 +1,4 @@
+# Archivos de configuracion desde classpath
 config.path.server=Server.ini
 config.path.archetype=Dat/Balance.dat
 config.path.charfiles=charfiles/
@@ -6,9 +7,13 @@ config.path.objsdat=Dat/obj.dat
 config.path.npcsdat=Dat/NPCs.dat
 config.maps.amount=290
 config.path.citiesdat=Dat/Ciudades.dat
+# Configuracion de seguridad
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
+# Configuracion del servicio de login
 config.loginservice.initialavailableskills=10
+# Configuracion de inventario
 config.inventory.itemperrow=5
+# Configuracion de heads para razas
 config.heads.darkelf.male=201-221
 config.heads.darkelf.female=270-288
 config.heads.dwarf.male=301-319
@@ -19,6 +24,7 @@ config.heads.gnome.male=401-416
 config.heads.gnome.female=470-484
 config.heads.human.male=1-40
 config.heads.human.female=70-89
+# Configuracion de bodies para razas
 config.bodies.darkelf.male=3
 config.bodies.darkelf.female=3
 config.bodies.dwarf.male=300
