refactor: move charfiles to data/ directory structure
- Update project.properties and test.properties paths
- Modify UserDAOIni to support new directory layout

--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,7 +1,7 @@
 # Archivos de configuracion desde classpath
 config.path.server=Server.ini
 config.path.archetype=Dat/Balance.dat
-config.path.charfiles=charfiles/
+config.path.charfiles=data/charfiles/
 config.path.maps=Maps/
 config.path.objsdat=Dat/obj.dat
 config.path.npcsdat=Dat/NPCs.dat
