--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
         <maven.surefire.plugin.version>3.2.3</maven.surefire.plugin.version>
         <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
+        <coveralls.plugin.version>4.3.0</coveralls.plugin.version>
         <jacoco.plugin.version>0.8.11</jacoco.plugin.version>
     </properties>
 
@@ -171,6 +172,12 @@
                     <version>${jacoco.plugin.version}</version>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.eluder.coveralls</groupId>
+                    <artifactId>coveralls-maven-plugin</artifactId>
+                    <version>${coveralls.plugin.version}</version>
+                </plugin>
+
                 <!-- Packaging plugins -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -185,12 +192,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <!-- No hace falta especificar la version? -->
             </plugin>
 
             <!-- Test coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
+                <!-- No hace falta especificar la version? -->
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -198,8 +207,22 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>${coveralls.plugin.version}</version>
+            </plugin>
+
         </plugins>
     </build>
 
