fix: set GITHUB_TOKEN for coverage report upload in Maven workflow

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -74,6 +74,8 @@ jobs:
       # Step 5: Genera reportes de cobertura
       - name: Generate coverage reports
         if: success() # Si el paso anterior fue exitoso...
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: mvn clean test jacoco:report coveralls:report # Limpia, ejecuta tests, genera reporte JaCoCo y lo envia a Coveralls
 
       # Step 6: Actualiza dependencias (con pr) para alertas de seguridad automaticas usando Dependabot (detecta vulnerabilidades en las dependencias) con vista grafica en "Dependency graph"
