fix: configure Coveralls plugin with repo token and source encoding

--- a/pom.xml
+++ b/pom.xml
@@ -217,11 +217,14 @@
                 </executions>
             </plugin>
 
-            <!-- SIN configuracion - GitHub Actions es detectado automaticamente, por lo que no hace falta especificar
-                 el token de Coveralls. -->
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
+                <configuration>
+                    <!-- Usa la variable de entorno COVERALLS_REPO_TOKEN -->
+                    <repoToken>${env.COVERALLS_REPO_TOKEN}</repoToken>
+                    <sourceEncoding>UTF-8</sourceEncoding>
+                </configuration>
             </plugin>
 
         </plugins>
