--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -71,13 +71,18 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml # Compila y empaqueta el proyecto en modo batch (no interactivo) usando el pom.xml
 
-      # Step 5: Genera reportes de cobertura
+      # Step 5: Genera reportes de cobertura por JaCoCo
       - name: Generate coverage reports
         if: success() # Si el paso anterior fue exitoso...
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }} # Token de acceso a Coveralls
-        run: mvn clean test jacoco:report coveralls:report # Limpia, ejecuta tests, genera reporte JaCoCo y lo envia a Coveralls
+        run: mvn clean test jacoco:report
 
-      # Step 6: Actualiza dependencias (con pr) para alertas de seguridad automaticas usando Dependabot (detecta vulnerabilidades en las dependencias) con vista grafica en "Dependency graph"
+      # Step 6: Envia reportes de cobertura a Coveralls.io
+      - name: Send coverage reports to Coveralls
+        if: success()
+        uses: coverallsapp/github-action@v2.3.6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      # Step 7: Actualiza dependencias (con pr) para alertas de seguridad automaticas usando Dependabot (detecta vulnerabilidades en las dependencias) con vista grafica en "Dependency graph"
       - name: Update dependency graph
         uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6 # El hash largo es la version especifica de la action para garantizar reproducibilidad y seguridad (evita que cambios maliciosos afecten el workflow)
