--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,9 @@ jobs:
     # Indica en que tipo de maquina va a ejecutar la action
     runs-on: ubuntu-latest # Maquina virtual de Ubuntu mas reciente
 
+    permissions:
+      contents: write
+
     # Pasos a ejecutar
     steps:
 
@@ -86,7 +89,6 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }} # Proporciona el token de autenticacion de GitHub para que Coveralls acceda al repositorio
 
-      # Step 7: Actualiza dependencias (con pr) para alertas de seguridad automaticas usando Dependabot (detecta vulnerabilidades en las dependencias) con vista grafica en "Dependency graph"
-      # Crear un temporizador mensual que se ejecute el 1 de cada mes para actualizar las dependencias
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6 # El hash largo es la version especifica de la action para garantizar reproducibilidad y seguridad (evita que cambios maliciosos afecten el workflow)
+      # Step 7: Envia el arbol de dependencias Maven a GitHub para alertas de seguridad automaticas via Dependabot
+      - name: Maven Dependency Tree Dependency Submission
+        uses: advanced-security/maven-dependency-submission-action@v5
