--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -39,6 +39,7 @@ jobs:
     # Indica en que tipo de maquina va a ejecutar la action
     runs-on: ubuntu-latest # Maquina virtual de Ubuntu mas reciente
 
+    # Permite la escritura al contenido para enviar el grafo de dependencias a GitHub para Dependabot
     permissions:
       contents: write
 
@@ -85,9 +86,11 @@ jobs:
       # Step 6: Envia reportes de cobertura a Coveralls.io
       - name: Send coverage reports to Coveralls
         if: success()
-        uses: coverallsapp/github-action@v2.3.6 # https://github.com/marketplace/actions/coveralls-github-action
+        uses: coverallsapp/github-action@v2 # https://github.com/marketplace/actions/coveralls-github-action
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }} # Proporciona el token de autenticacion de GitHub para que Coveralls acceda al repositorio
+          format: jacoco
+          file: target/site/jacoco/jacoco.xml
 
       # Step 7: Envia el arbol de dependencias Maven a GitHub para alertas de seguridad automaticas via Dependabot
       - name: Maven Dependency Tree Dependency Submission
