--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -89,6 +89,10 @@ jobs:
         uses: coverallsapp/github-action@v2 # https://github.com/marketplace/actions/coveralls-github-action
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }} # Proporciona el token de autenticacion de GitHub para que Coveralls acceda al repositorio
+          format: jacoco
+          file: target/site/jacoco/jacoco.xml
+          base-path: .
+          carryforward: "Unit"
 
       # Step 7: Envia el arbol de dependencias Maven a GitHub para alertas de seguridad automaticas via Dependabot
       - name: Maven Dependency Tree Dependency Submission
