refactor: rename `ciudades.dat` to `cities.dat` for consistency

--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -8,7 +8,7 @@ config.path.maps=maps/
 config.path.objsdat=dat/obj.dat
 config.path.npcsdat=dat/NPCs.dat
 config.maps.amount=290
-config.path.citiesdat=dat/ciudades.dat
+config.path.citiesdat=dat/cities.dat
 # Configuracion de seguridad
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
 # Configuracion del servicio de login
