refactor: standardize resource file names and update references
- Renamed files and paths to lowercase (e.g., NPCs.dat to npcs.dat, obj.dat to objects.dat)
- Adjusted configuration and class references for consistency
- Moved the .dat files into the “dat” folder

--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -2,13 +2,14 @@
 # Creo que es innecesario este archivo, ya que ahora los recursos se leen desde el classpath, por lo tanto creo que el
 # archivo project.properties es suficiente
 config.path.server=Server.ini
-config.path.archetype=dat/balance.dat
 config.path.charfiles=data/charfiles/
-config.path.maps=maps/
-config.path.objsdat=dat/obj.dat
-config.path.npcsdat=dat/NPCs.dat
-config.maps.amount=290
+config.path.archetype=dat/balances.dat
 config.path.citiesdat=dat/cities.dat
+# ¿Por que si lo especifico como "npcs.dat" sin la carpeta dat funciona igual?
+config.path.npcsdat=dat/npcs.dat
+config.path.objsdat=dat/objects.dat
+config.path.maps=maps/
+config.maps.amount=290
 # Configuracion de seguridad
 config.security.manager=com.ao.security.impl.DefaultSecurityManager
 # Configuracion del servicio de login
