--- a/server/src/main/resources/Server.ini
+++ b/server/src/main/resources/Server.ini
@@ -12,39 +12,39 @@ PuedeCrearPersonajes=1
 ServerSoloGMs=0
 Testing=0
 
-ArmaduraImperial1 = 370
-TunicaMagoImperial = 517
-TunicaMagoImperialEnanos = 549
-ArmaduraImperial2 = 372
-ArmaduraImperial3 = 492
+ArmaduraImperial1=370
+TunicaMagoImperial=517
+TunicaMagoImperialEnanos=549
+ArmaduraImperial2=372
+ArmaduraImperial3=492
 
-ArmaduraCaos1 = 379
-TunicaMagoCaos = 518
-TunicaMagoCaosEnanos = 558
-ArmaduraCaos2 = 523
-ArmaduraCaos3 = 383
+ArmaduraCaos1=379
+TunicaMagoCaos=518
+TunicaMagoCaosEnanos=558
+ArmaduraCaos2=523
+ArmaduraCaos3=383
 
-VestimentaImperialHumano = 675
-VestimentaImperialEnano = 676
-TunicaConspicuaHumano = 679
-TunicaConspicuaEnano = 682
-ArmaduraNobilisimaHumano = 629
-ArmaduraNobilisimaEnano = 681
-ArmaduraGranSacerdote = 680
+VestimentaImperialHumano=675
+VestimentaImperialEnano=676
+TunicaConspicuaHumano=679
+TunicaConspicuaEnano=682
+ArmaduraNobilisimaHumano=629
+ArmaduraNobilisimaEnano=681
+ArmaduraGranSacerdote=680
 
-VestimentaLegionHumano = 677
-VestimentaLegionEnano = 678
-TunicaLobregaHumano = 683
-TunicaLobregaEnano = 685
-TunicaEgregiaHumano= 634
-TunicaEgregiaEnano = 686
-SacerdoteDemoniaco = 684
+VestimentaLegionHumano=677
+VestimentaLegionEnano=678
+TunicaLobregaHumano=683
+TunicaLobregaEnano=685
+TunicaEgregiaHumano=634
+TunicaEgregiaEnano=686
+SacerdoteDemoniaco=684
 
 MapaPretoriano=163
 
 MaxUsers=550
 
-Record= 517
+Record=517
 
 Dioses=8
 SemiDioses=17
@@ -107,42 +107,45 @@ RM7=NIHIELOR
 RM8=INJU
 RM9=RENSOKU
 
-#Argentum Online - Server Side Library
+# Argentum Online - Server Side Library
 [AOSSLib]
-#todos los directorios asumen ser subs de App.Path;;
-#directorio donde escribira el log
+# Todos los directorios asumen ser subs de App.Path;;
+# Directorio donde escribira el log
 logdir=logs
-#directorio charfiles usado por CAutoDeleteUsers
+# Directorio charfiles usado por CAutoDeleteUsers
 chardir=charfile
 
 [INTERVALOS]
-SanaIntervaloSinDescansar= 1600
+SanaIntervaloSinDescansar=1600
 StaminaIntervaloSinDescansar=10
-SanaIntervaloDescansar= 100
-StaminaIntervaloDescansar= 5
-IntervaloSed= 6000
-IntervaloHambre= 6500
-IntervaloVeneno= 500
-IntervaloParalizado= 500
-IntervaloInvisible= 500
-IntervaloOculto= 500
+SanaIntervaloDescansar=100
+StaminaIntervaloDescansar=5
+IntervaloSed=6000
+IntervaloHambre=6500
+IntervaloVeneno=500
+IntervaloParalizado=500
+IntervaloInvisible=500
+IntervaloOculto=500
 IntervaloFrio=15
-IntervaloWAVFX= 190
+IntervaloWAVFX=190
 IntervaloMover=200
 IntervaloLanzaHechizo=1400
 IntervaloNpcAI=380
 IntervaloNpcPuedeAtacar=1600
 IntervaloTrabajo=700
 IntervaloUserPuedeAtacar=1500
-IntervaloWS=180 #Cantidad de minutos
-IntervaloInvocacion= 1001
+# Cantidad de minutos
+IntervaloWS=180
+IntervaloInvocacion=1001
 IntervaloPerdidaStaminaLluvia=9999
-IntervaloParaConexion= 3000
+IntervaloParaConexion=3000
 IntervaloTimerExec=50
-IntervaloCerrarConexion=5 #Segundos
+# Segundos
+IntervaloCerrarConexion=5
 IntervaloUserPuedeUsar=125
 IntervaloFlechasCazadores=1400
-IntervaloAutoReiniciar=100000 #-1 para deshabilitar
+# -1 para deshabilitar
+IntervaloAutoReiniciar=100000
 IntervaloMagiaGolpe=1000
 IntervaloGolpeMagia=1000
 
@@ -154,8 +157,8 @@ Activado=1
 MD5Aceptados=2
 VerArchivosCriticos=1
 
-#cliente normal
+# Cliente normal
 Md5Aceptado1=555656167382A654A5B7EB7B613CBA64
 
-#cliente AlphaBlending
+# Cliente AlphaBlending
 Md5Aceptado2=1DA11E3F5BE3E075DB8A16E9831CC998
