refactor: rename `Server.ini` to `server.ini` for consistency across configuration files

--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,5 +1,5 @@
 # Archivos de configuracion desde classpath
-config.path.server=Server.ini
+config.path.server=server.ini
 config.path.charfiles=data/charfiles/
 config.path.archetype=dat/balances.dat
 config.path.citiesdat=dat/cities.dat
