--- a/server/src/test/resources/test.properties
+++ b/server/src/test/resources/test.properties
@@ -1,7 +1,7 @@
 # Archivos de configuracion desde classpath
 # Creo que es innecesario este archivo, ya que ahora los recursos se leen desde el classpath, por lo tanto creo que el
 # archivo project.properties es suficiente
-config.path.server=Server.ini
+config.path.server=server.ini
 config.path.charfiles=data/charfiles/
 config.path.archetype=dat/balances.dat
 config.path.citiesdat=dat/cities.dat
