refactor: move charfiles directory to project root and resolve paths with NIO

--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,6 +1,7 @@
 # Archivos de configuracion desde classpath
 config.path.server=server.ini
-config.path.charfiles=data/charfiles/
+# Ya que el working directory es el modulo server, entonces setea la propiedad especificando "../" ya que esta carpeta esta en la raiz del proyecto
+config.path.charfiles=../charfiles
 config.path.archetype=dat/balances.dat
 config.path.citiesdat=dat/cities.dat
 config.path.npcsdat=dat/npcs.dat
