--- a/server/src/test/resources/server.ini
+++ b/server/src/test/resources/server.ini
@@ -5,6 +5,7 @@ StartPort=7666
 Hide=1
 AllowMultiLogins=1
 IdleLimit=5
+# A que se debe testiarlo con esta version?
 Version=0.12.2
 IniciarDesdeBackUp=0
 PuedeCrearPersonajes=1
