--- a/server/src/test/resources/server.ini
+++ b/server/src/test/resources/server.ini
@@ -1,165 +1,165 @@
 [INIT]
-ServerIp=127.0.0.1
-CrcSubKey=12345
-StartPort=7666
-Hide=1
-AllowMultiLogins=1
-IdleLimit=5
+ServerIp = 127.0.0.1
+CrcSubKey = 12345
+StartPort = 7666
+Hide = 1
+AllowMultiLogins = 1
+IdleLimit = 5
 # A que se debe testiarlo con esta version?
-Version=0.12.2
-IniciarDesdeBackUp=0
-PuedeCrearPersonajes=1
+Version = 0.12.2
+IniciarDesdeBackUp = 0
+PuedeCrearPersonajes = 1
 
-ServerSoloGMs=0
-Testing=0
+ServerSoloGMs = 0
+Testing = 0
 
-ArmaduraImperial1=370
-TunicaMagoImperial=517
-TunicaMagoImperialEnanos=549
-ArmaduraImperial2=372
-ArmaduraImperial3=492
+ArmaduraImperial1 = 370
+TunicaMagoImperial = 517
+TunicaMagoImperialEnanos = 549
+ArmaduraImperial2 = 372
+ArmaduraImperial3 = 492
 
-ArmaduraCaos1=379
-TunicaMagoCaos=518
-TunicaMagoCaosEnanos=558
-ArmaduraCaos2=523
-ArmaduraCaos3=383
+ArmaduraCaos1 = 379
+TunicaMagoCaos = 518
+TunicaMagoCaosEnanos = 558
+ArmaduraCaos2 = 523
+ArmaduraCaos3 = 383
 
-VestimentaImperialHumano=675
-VestimentaImperialEnano=676
-TunicaConspicuaHumano=679
-TunicaConspicuaEnano=682
-ArmaduraNobilisimaHumano=629
-ArmaduraNobilisimaEnano=681
-ArmaduraGranSacerdote=680
+VestimentaImperialHumano = 675
+VestimentaImperialEnano = 676
+TunicaConspicuaHumano = 679
+TunicaConspicuaEnano = 682
+ArmaduraNobilisimaHumano = 629
+ArmaduraNobilisimaEnano = 681
+ArmaduraGranSacerdote = 680
 
-VestimentaLegionHumano=677
-VestimentaLegionEnano=678
-TunicaLobregaHumano=683
-TunicaLobregaEnano=685
-TunicaEgregiaHumano=634
-TunicaEgregiaEnano=686
-SacerdoteDemoniaco=684
+VestimentaLegionHumano = 677
+VestimentaLegionEnano = 678
+TunicaLobregaHumano = 683
+TunicaLobregaEnano = 685
+TunicaEgregiaHumano = 634
+TunicaEgregiaEnano = 686
+SacerdoteDemoniaco = 684
 
-MapaPretoriano=163
+MapaPretoriano = 163
 
-MaxUsers=550
+MaxUsers = 550
 
-Record= 517
+Record = 517
 
-Dioses=8
-SemiDioses=17
-Consejeros=14
-RolesMasters=9
+Dioses = 8
+SemiDioses = 17
+Consejeros = 14
+RolesMasters = 9
 
 [Dioses]
-Dios1=TATO
-Dios2=BRUNILDE
-Dios3=RAMZA
-Dios4=ALATARIEL
-Dios5=EL PANDA
-Dios6=MARAXUS
-Dios7=STARVIN
-Dios8=BENICIO
+Dios1 = TATO
+Dios2 = BRUNILDE
+Dios3 = RAMZA
+Dios4 = ALATARIEL
+Dios5 = EL PANDA
+Dios6 = MARAXUS
+Dios7 = STARVIN
+Dios8 = BENICIO
 
 [SemiDioses]
-Semidios1=POTOTI
-Semidios2=KANDIMAN
-Semidios3=CHAST
-semidios4=JUAN CARLOS
-Semidios5=CAYO MARIO
-Semidios6=CAMILLE
-Semidios7=VALENTINE
-Semidios8=ACCURSO
-Semidios9=WARREN SANCHEZ
-Semidios10=ZAURAK
-Semidios11=KANDIMAN
-Semidios12=DEMEX
-Semidios13=LEGL
-Semidios14=NIHIELOR
-Semidios15=SURICATAMIKE
-Semidios16=INTEGER
-Semidios17=NIGO
+Semidios1 = POTOTI
+Semidios2 = KANDIMAN
+Semidios3 = CHAST
+semidios4 = JUAN CARLOS
+Semidios5 = CAYO MARIO
+Semidios6 = CAMILLE
+Semidios7 = VALENTINE
+Semidios8 = ACCURSO
+Semidios9 = WARREN SANCHEZ
+Semidios10 = ZAURAK
+Semidios11 = KANDIMAN
+Semidios12 = DEMEX
+Semidios13 = LEGL
+Semidios14 = NIHIELOR
+Semidios15 = SURICATAMIKE
+Semidios16 = INTEGER
+Semidios17 = NIGO
 
 [Consejeros]
-Consejero1=ELDASSIL
-Consejero2=BALZHUR
-Consejero3=LEONTINO
-Consejero4=BOLKOW
-Consejero5=CHARLOTTE
-Consejero6=EPAMINONDAS
-Consejero7=CARINYC FERNY
-Consejero8=NILZIGARAN
-Consejero9=THOR
-Consejero10=DAVID HUME
-Consejero11=INJU
-Consejero12=LATERNAL
-Consejero13=ELVIO GANNET
-Consejero14=RENSOKU
+Consejero1 = ELDASSIL
+Consejero2 = BALZHUR
+Consejero3 = LEONTINO
+Consejero4 = BOLKOW
+Consejero5 = CHARLOTTE
+Consejero6 = EPAMINONDAS
+Consejero7 = CARINYC FERNY
+Consejero8 = NILZIGARAN
+Consejero9 = THOR
+Consejero10 = DAVID HUME
+Consejero11 = INJU
+Consejero12 = LATERNAL
+Consejero13 = ELVIO GANNET
+Consejero14 = RENSOKU
 
 [RolesMasters]
-RM1=STARVIN
-RM2=ELVIO GANNET
-RM3=LEGL
-RM4=DEMEX
-RM5=SURICATAMIKE
-RM6=LATERNAL
-RM7=NIHIELOR
-RM8=INJU
-RM9=RENSOKU
+RM1 = STARVIN
+RM2 = ELVIO GANNET
+RM3 = LEGL
+RM4 = DEMEX
+RM5 = SURICATAMIKE
+RM6 = LATERNAL
+RM7 = NIHIELOR
+RM8 = INJU
+RM9 = RENSOKU
 
 # Argentum Online - Server Side Library
 [AOSSLib]
 # Todos los directorios asumen ser subs de App.Path;;
 # Directorio donde escribira el log
-logdir=logs
+logdir = logs
 # Directorio charfiles usado por CAutoDeleteUsers
-chardir=charfile
+chardir = charfile
 
 [INTERVALOS]
-SanaIntervaloSinDescansar=1600
-StaminaIntervaloSinDescansar=10
-SanaIntervaloDescansar=100
+SanaIntervaloSinDescansar = 1600
+StaminaIntervaloSinDescansar = 10
+SanaIntervaloDescansar = 100
 StaminaIntervaloDescansar 5
-IntervaloSed=6000
-IntervaloHambre=6500
-IntervaloVeneno=500
-IntervaloParalizado=500
-IntervaloInvisible=500
-IntervaloOculto=500
-IntervaloFrio=15
-IntervaloWAVFX=190
-IntervaloMover=200
-IntervaloLanzaHechizo=1400
-IntervaloNpcAI=380
-IntervaloNpcPuedeAtacar=1600
-IntervaloTrabajo=700
-IntervaloUserPuedeAtacar=1500
+IntervaloSed = 6000
+IntervaloHambre = 6500
+IntervaloVeneno = 500
+IntervaloParalizado = 500
+IntervaloInvisible = 500
+IntervaloOculto = 500
+IntervaloFrio = 15
+IntervaloWAVFX = 190
+IntervaloMover = 200
+IntervaloLanzaHechizo = 1400
+IntervaloNpcAI = 380
+IntervaloNpcPuedeAtacar = 1600
+IntervaloTrabajo = 700
+IntervaloUserPuedeAtacar = 1500
 # Cantidad de minutos
-IntervaloWS=180
-IntervaloInvocacion=1001
-IntervaloPerdidaStaminaLluvia=9999
-IntervaloParaConexion=3000
-IntervaloTimerExec=50
+IntervaloWS = 180
+IntervaloInvocacion = 1001
+IntervaloPerdidaStaminaLluvia = 9999
+IntervaloParaConexion = 3000
+IntervaloTimerExec = 50
 # Segundos
-IntervaloCerrarConexion=5
-IntervaloUserPuedeUsar=125
-IntervaloFlechasCazadores=1400
+IntervaloCerrarConexion = 5
+IntervaloUserPuedeUsar = 125
+IntervaloFlechasCazadores = 1400
 # -1 para deshabilitar
-IntervaloAutoReiniciar=100000
-IntervaloMagiaGolpe=1000
-IntervaloGolpeMagia=1000
+IntervaloAutoReiniciar = 100000
+IntervaloMagiaGolpe = 1000
+IntervaloGolpeMagia = 1000
 
 [BALANCE]
-PorcentajeRecuperoMana=6
+PorcentajeRecuperoMana = 6
 
 [MD5Hush]
-Activado=1
-MD5Aceptados=2
-VerArchivosCriticos=1
+Activado = 1
+MD5Aceptados = 2
+VerArchivosCriticos = 1
 
 # Cliente normal
-Md5Aceptado1=555656167382A654A5B7EB7B613CBA64
+Md5Aceptado1 = 555656167382A654A5B7EB7B613CBA64
 
 # Cliente AlphaBlending
-Md5Aceptado2=1DA11E3F5BE3E075DB8A16E9831CC998
+Md5Aceptado2 = 1DA11E3F5BE3E075DB8A16E9831CC998
