--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,38 +1,38 @@
 # Archivos de configuracion desde classpath
-config.path.server=server.ini
-# Ya que el working directory es el modulo server, entonces setea la propiedad especificando "../" ya que esta carpeta esta en la raiz del proyecto
-config.path.charfiles=../charfiles
-config.path.archetype=dat/balances.dat
-config.path.citiesdat=dat/cities.dat
-config.path.npcsdat=dat/npcs.dat
-config.path.objsdat=dat/objects.dat
-config.path.maps=maps/
-config.maps.amount=290
+config.path.server = server.ini
+# Ya que el working directory es el modulo server, entonces setea la propiedad especificando "../" ya que la carpeta charfiles esta en la raiz del proyecto
+config.path.charfiles = ../charfiles
+config.path.archetype = dat/balances.dat
+config.path.citiesdat = dat/cities.dat
+config.path.npcsdat = dat/npcs.dat
+config.path.objsdat = dat/objects.dat
+config.path.maps = maps/
+config.maps.amount = 290
 # Configuracion de seguridad
-config.security.manager=com.ao.security.impl.DefaultSecurityManager
+config.security.manager = com.ao.security.impl.DefaultSecurityManager
 # Configuracion del servicio de login
-config.loginservice.initialavailableskills=10
+config.loginservice.initialavailableskills = 10
 # Configuracion de inventario
-config.inventory.itemperrow=5
+config.inventory.itemperrow = 5
 # Configuracion de heads para razas
-config.heads.darkelf.male=201-221
-config.heads.darkelf.female=270-288
-config.heads.dwarf.male=301-319
-config.heads.dwarf.female=370-384
-config.heads.elf.male=101-122
-config.heads.elf.female=170-188
-config.heads.gnome.male=401-416
-config.heads.gnome.female=470-484
-config.heads.human.male=1-40
-config.heads.human.female=70-89
+config.heads.darkelf.male = 201-221
+config.heads.darkelf.female = 270-288
+config.heads.dwarf.male = 301-319
+config.heads.dwarf.female = 370-384
+config.heads.elf.male = 101-122
+config.heads.elf.female = 170-188
+config.heads.gnome.male = 401-416
+config.heads.gnome.female = 470-484
+config.heads.human.male = 1-40
+config.heads.human.female = 70-89
 # Configuracion de bodies para razas
-config.bodies.darkelf.male=3
-config.bodies.darkelf.female=3
-config.bodies.dwarf.male=300
-config.bodies.dwarf.female=300
-config.bodies.elf.male=2
-config.bodies.elf.female=2
-config.bodies.gnome.male=300
-config.bodies.gnome.female=300
-config.bodies.human.male=1
-config.bodies.human.female=1
+config.bodies.darkelf.male = 3
+config.bodies.darkelf.female = 3
+config.bodies.dwarf.male = 300
+config.bodies.dwarf.female = 300
+config.bodies.elf.male = 2
+config.bodies.elf.female = 2
+config.bodies.gnome.male = 300
+config.bodies.gnome.female = 300
+config.bodies.human.male = 1
+config.bodies.human.female = 1
