refactor: rename `dat/` folder to `data/`

--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -2,10 +2,10 @@
 config.path.server = server.ini
 # Ya que el working directory es el modulo server, entonces setea la propiedad especificando "../" ya que la carpeta charfiles esta en la raiz del proyecto
 config.path.charfiles = ../charfiles
-config.path.archetype = dat/balances.dat
-config.path.citiesdat = dat/cities.dat
-config.path.npcsdat = dat/npcs.dat
-config.path.objsdat = dat/objects.dat
+config.path.archetype = data/balances.dat
+config.path.citiesdat = data/cities.dat
+config.path.npcsdat = data/npcs.dat
+config.path.objsdat = data/objects.dat
 config.path.maps = maps/
 config.maps.amount = 290
 # Configuracion de seguridad
