refactor: clean and reorganize constants in `UserDAOIni`, standardize method names, and improve file path handling
- UserDAOIniTest: change File to Path operations
- project.properties: update `config.path.charfiles` property to remove relative path usage, improve consistency

--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,7 +1,6 @@
 # Archivos de configuracion desde classpath
 config.path.server = server.ini
-# Ya que el working directory es el modulo server, entonces setea la propiedad especificando "../" ya que la carpeta charfiles esta en la raiz del proyecto
-config.path.charfiles = ../charfiles
+config.path.charfiles = charfiles
 config.path.archetype = data/balances.dat
 config.path.citiesdat = data/cities.dat
 config.path.npcsdat = data/npcs.dat
