chore: remove `test.chr` file and update `.gitignore` to exclude `/charfiles` directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Ignore the folder /target in the project root
+# Ignore the folder /target and /charfiles in the project root
 target
+charfiles
 
 # Ignore all the files and folders that begin with a point (hidden files)
 .*
