fix: gm logging

--- a/server/src/main/resources/server.ini
+++ b/server/src/main/resources/server.ini
@@ -46,7 +46,7 @@ MaxUsers = 550
 
 Record = 517
 
-Dioses = 8
+Dioses = 9
 SemiDioses = 17
 Consejeros = 14
 RolesMasters = 9
@@ -60,6 +60,7 @@ Dios5 = EL PANDA
 Dios6 = MARAXUS
 Dios7 = STARVIN
 Dios8 = BENICIO
+Dios9 = RUSOCODE
 
 [SemiDioses]
 Semidios1 = POTOTI
