--- a/server/src/main/resources/project.properties
+++ b/server/src/main/resources/project.properties
@@ -1,6 +1,7 @@
 # Archivos de configuracion desde classpath
 config.path.server = server.ini
 config.path.charfiles = charfiles
+# TODO El nombre del archivo balances.dat no coincide con "archetype"
 config.path.archetype = data/balances.dat
 config.path.citiesdat = data/cities.dat
 config.path.npcsdat = data/npcs.dat
